src/objects/fferpcore__MessagingDelivery__c.object
<CustomObject>
    <customHelpPage>fferpcore__MessagingDeliveryHelp</customHelpPage>
    <description>A message</description>
    <fields>
        <fullName>fferpcore__Body01__c</fullName>
        <description>Serialised message body.</description>
        <label>Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>fferpcore__Chunk__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Chunk</label>
        <referenceTo>fferpcore__Chunk__c</referenceTo>
        <relationshipLabel>Deliveries</relationshipLabel>
        <relationshipName>Deliveries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fferpcore__Message__c</fullName>
        <description>Message that this Delivery belongs to</description>
        <label>Message</label>
        <referenceTo>fferpcore__MessagingMessage__c</referenceTo>
        <relationshipLabel>Deliveries</relationshipLabel>
        <relationshipName>Deliveries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>fferpcore__State__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Successful</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Exception</fullName>
                </value>
                <value>
                    <fullName>Filtered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fferpcore__Subscription__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Subscription</label>
        <referenceTo>fferpcore__MessagingSubscription__c</referenceTo>
        <relationshipLabel>Deliveries</relationshipLabel>
        <relationshipName>Deliveries</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Delivery</label>
    <nameField>
        <displayFormat>DEL-{YYYY}{MM}{0000000000}</displayFormat>
        <label>Delivery ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deliveries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>